--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -11,6 +11,10 @@ body {
   padding-bottom: max(16px, env(safe-area-inset-bottom));
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .container {
   width: 100%;
   max-width: 500px;
@@ -36,9 +40,9 @@ body {
 }
 
 .primary-button {
-  display: block;
+  display: inline-block;
   width: 100%;
-  padding: 24px;
+  padding: 16px 12px;
   margin-bottom: 32px;
   font-size: 18px;
   font-weight: 600;
